Cambio de color de fondo a plata

--- a/hello.html
+++ b/hello.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Hello Git</title>
+  <style>
+      body {background-color : silver;}
+  </style> 
 </head>
 <body>
 <h1>Hello Git</h1>  
