Cambio de color de fondo a tipo rojo

--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <title>Hello Git</title>
   <style>
-      body {background-color : silver;}
+      /* body {background-color : silver;} */
+      body {background-color : brown;}
   </style> 
 </head>
 <body>
