Vuelve master a ser index.html con fondo blanco

--- a/hello.html
+++ b/hello.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <title>Hello Git</title>
   <style>
-      /* body {background-color : silver;} */
-      body {background-color : brown;}
+      body {background-color : white;}
   </style> 
 </head>
 <body>
