--- a/hello.html
+++ b/hello.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Hello Git</title>
-  <style>
-      /* body {background-color : silver;} */
-      body {background-color : brown;}
+  <style>      
+      body {background-color : #FFC1BF;}
   </style> 
 </head>
 <body>
