--- a/hello.html
+++ b/hello.html
@@ -3,17 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Hello Git</title>
-<<<<<<< HEAD
   <style>
       body {background-color : white;}
-=======
-  <style>      
-      body {background-color : #FFC1BF;}
->>>>>>> 1ea44843c06cc23c367328455ac3a10dd544bd68
-  </style> 
+  </style>      
 </head>
 <body>
 <h1>Hello Git</h1>  
      Primer contenido en github desde repositorio remoto.
+     Ahjuste desde master local
 </body>
 </html>
