--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,7 @@
   <title>Hello Git</title>
   <style>      
       body {background-color : #FFC1BF;}
+    h1 {color: blue;}
   </style> 
 </head>
 <body>
