--- a/hello.html
+++ b/hello.html
@@ -3,16 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Hello Git</title>
-<<<<<<< HEAD
-  <style>
+  <style type="text/css">
       body {background-color : white;}
   </style>      
-=======
-  <style>      
-      body {background-color : #FFC1BF;}
-        h1,p {color: blue;}
-  </style> 
->>>>>>> origin/color
 </head>
 <body>
 <h1>Hello Git</h1>  
