--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <title>Hello Git</title>
   <style type="text/css">
-      body {background-color : white;}
+      body {background-color : #FFC1BF;}
+      h1,p {color: blue;}
   </style>      
 </head>
 <body>
