Se agregaron mas estilos al tipo de letra y se agrego un boton

--- a/hello.html
+++ b/hello.html
@@ -5,12 +5,24 @@
   <title>Hello Git</title>
   <style type="text/css">
       body {background-color : #FFC1BF;}
-      h1,p {color: blue;}
+      h1,p {color: blue;
+            text-transform: uppercase;
+            letter-spacing: 5px;
+           }
+      .btn { text-decoration: none;  }   
+      
+      .btn:hover{
+      	    display: inline-block;
+      		transition: 0.3px;		
+      }  
   </style>      
 </head>
 <body>
 <h1>Hello Git</h1>  
-     Primer contenido en github desde repositorio remoto.
-     Ahjuste desde master local
+    <p> Primer contenido en github desde repositorio remoto.
+     Ahjuste desde master local</p>
+
+     
+     <button class="anim"><a class="btn" href="https://google.com">Google</a></button>
 </body>
 </html>
